js/js.translator/testData/incremental/invalidation/localObjectsLeakThroughInterface/lib1/classA.0.kt
class ClassA {
    fun leakObject(): Interface {
        konst obj = object : Interface {}
        return obj
    }
}
